--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "engines": {
     "node": "18.x",
     "pnpm": "8.x"
+  },
+  "dependencies": {
+    "client": "^0.0.1",
+    "react-autosize-textarea": "^7.1.0"
   }
 }
