--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.2",
-    "tailwind-merge": "^1.11.0"
+    "tailwind-merge": "^1.11.0",
+    "use-local-storage-state": "^18.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.11",
