--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,12 @@
     "test": "tsc --noEmit"
   },
   "dependencies": {
+    "@canvas-js/libp2p-okra-service": "^0.0.1",
+    "@canvas-js/okra": "^0.0.1",
+    "@canvas-js/okra-idb": "^0.0.2",
+    "@canvas-js/pubsub-service-discovery": "^0.0.8",
+    "@chainsafe/libp2p-gossipsub": "^8.0.0",
+    "@chainsafe/libp2p-noise": "^12.0.1",
     "@ethersproject/providers": "^5.7.2",
     "@latticexyz/common": "2.0.0-alpha.1.177",
     "@latticexyz/dev-tools": "2.0.0-alpha.1.177",
@@ -22,9 +28,22 @@
     "@latticexyz/std-client": "2.0.0-alpha.1.177",
     "@latticexyz/utils": "2.0.0-alpha.1.177",
     "@latticexyz/world": "2.0.0-alpha.1.177",
+    "@libp2p/bootstrap": "^8.0.0",
+    "@libp2p/interface-connection": "^5.1.0",
+    "@libp2p/interface-libp2p": "^3.2.0",
+    "@libp2p/interface-peer-id": "^2.0.2",
+    "@libp2p/interface-pubsub": "^4.0.1",
+    "@libp2p/interfaces": "^3.3.2",
+    "@libp2p/mplex": "^8.0.3",
+    "@libp2p/peer-id-factory": "^2.0.3",
+    "@libp2p/websockets": "^6.0.1",
+    "@noble/hashes": "^1.3.0",
     "@wagmi/chains": "^0.2.22",
     "contracts": "workspace:*",
     "ethers": "^5.7.2",
+    "idb": "^7.1.1",
+    "libp2p": "^0.45.3",
+    "multiformats": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.2",
