--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,14 +40,18 @@
     "@noble/hashes": "^1.3.0",
     "@wagmi/chains": "^0.2.22",
     "contracts": "workspace:*",
+    "dexie": "^3.2.3",
+    "dexie-react-hooks": "^1.1.3",
     "ethers": "^5.7.2",
     "idb": "^7.1.1",
     "libp2p": "^0.45.3",
+    "microcbor": "^0.2.1",
     "multiformats": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.2",
     "tailwind-merge": "^1.11.0",
+    "uint8arrays": "^4.0.3",
     "use-local-storage-state": "^18.3.3"
   },
   "devDependencies": {
